@@ -7,9 +7,9 @@ DRAW_HULLS      = draw_hulls
 DRAW_STATS      = draw_stats
 EXPAND_NODELIST = sl_expand_nodelist.pl
 
-EXTRA_DIST = $(SOURCEME_SH) $(LAUNCHER) $(LAUNCHER).py $(SWEEP) $(SWEEP).py $(FE_WRAPPER) $(BE_WRAPPER) $(DRAW_HULLS) $(DRAW_STATS) $(EXPAND_NODELIST) tdbscan-mass-submit tdbscan-mass-submit.py tdbscan-process-results tdbscan-process-results.py
+EXTRA_DIST = $(SOURCEME_SH) $(LAUNCHER) $(LAUNCHER).py $(SWEEP) $(SWEEP).py $(FE_WRAPPER) $(BE_WRAPPER) $(DRAW_HULLS) $(DRAW_STATS) $(EXPAND_NODELIST) tdbscan-mass-submit tdbscan-mass-submit.py tdbscan-process-results tdbscan-process-results.py concat-csv.py concat-csv
 
-bin_SCRIPTS    = $(LAUNCHER) $(LAUNCHER).py $(SWEEP) $(SWEEP).py $(FE_WRAPPER) $(BE_WRAPPER) $(DRAW_HULLS) $(DRAW_STATS) $(EXPAND_NODELIST) tdbscan-mass-submit tdbscan-mass-submit.py tdbscan-process-results tdbscan-process-results.py
+bin_SCRIPTS    = $(LAUNCHER) $(LAUNCHER).py $(SWEEP) $(SWEEP).py $(FE_WRAPPER) $(BE_WRAPPER) $(DRAW_HULLS) $(DRAW_STATS) $(EXPAND_NODELIST) tdbscan-mass-submit tdbscan-mass-submit.py tdbscan-process-results tdbscan-process-results.py concat-csv.py concat-csv
 noinst_SCRIPTS = $(SOURCEME_SH)
 
 install-data-hook:
@@ -29,7 +29,9 @@ install-data-hook:
 	$(top_srcdir)/substitute     $(SED) "@sub_PREFIX@" ${prefix} $(bindir)/tdbscan-mass-submit
 	$(top_srcdir)/substitute     $(SED) "@sub_PREFIX@" ${prefix} $(bindir)/tdbscan-process-results
 	$(top_srcdir)/substitute     $(SED) "@sub_PREFIX@" ${prefix} $(bindir)/tdbscan-process-results.py
+	$(top_srcdir)/substitute     $(SED) "@sub_PREFIX@" ${prefix} $(bindir)/concat-csv
 	chmod a+x $(bindir)/$(LAUNCHER) $(bindir)/$(SWEEP)
 	chmod a+x $(bindir)/$(FE_WRAPPER) $(bindir)/$(BE_WRAPPER)
 	chmod a+x $(bindir)/tdbscan-mass-submit $(bindir)/tdbscan-process-results
+	chmod a+x $(bindir)/concat-csv
 	ln -fs `basename $(bindir)/$(FE_WRAPPER)` $(bindir)/TDBSCAN
